tests/fail/record_literal_more_params.err
Semantic Error: Invalid fields count, 1 needed but 2 given at line 6.
